--- a/index.html
+++ b/index.html
@@ -1,9 +1,31 @@
+<!--
+#####  TODO: #######
+====================
+- Add Angular Material
+- 3 Tabs,
+    1. Chart Viewer + Digest (and highlights?)
+    2. Timeline/Table View of Pros + Cons
+    3. Saved Charts (with mini digest view)s
+ -->
 <html>
   <head>
+    <link rel="stylesheet" href="https://rawgit.com/angular/bower-material/master/angular-material.css">
+    <link rel="stylesheet" href="stylesheet.css">
     <!--Load the AJAX API-->
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+
+    <!-- Angular + MD Dependencies -->
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-animate.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.6/angular-aria.js"></script>
+
+    <!-- Angular Material -->
+    <script src="https://rawgit.com/angular/bower-material/master/angular-material.js"></script>
+
+    <script src="ngStorage.min.js"></script>
+
+
     <script type="text/javascript" src="app.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
   </head>
 
   <body>
